Removed manual _tag search in favor of .withTag()